# aedif

./: .gitignore  .gitmodules  Cargo.toml  README.md  aedif.h  aedif.lua  bar.lua  bootstrap.c  cb  cb.c  foo.lua
lib/: drapeau.h  dynString.h
lib/lua-5.4.3/src/: lua  luac
src/: aedif_lua_module.c  aedif_lua_module.h  build_data.c  build_data.h  commandline_parser.c  commandline_parser.h  conversion.c  conversion.h  err_print_syntax.h  lua_debug.c  lua_debug.h  lua_utils.c  lua_utils.h  main.c  main.rs  parse_args.c  parse_args.h  predefined_vars.c  predefined_vars.h  project_data.c  project_data.h  registered_funcs.c  registered_funcs.h
src/aedif_std/: mod.rs  os.rs
src/error/: err_prefix.h  print_error.c  print_error.h
src/ffi/: link_lua.c  link_lua.h
src/ffi/os/: aedif_os_copy.c  aedif_os_isdir.c  aedif_os_isfile.c  aedif_os_issym.c  aedif_os_mkdir.c  aedif_os_ostype.c  aedif_os_rename.c  aedif_os_rmdir.c  aedif_os_rmfile.c  os_functions.h
